# 3d-figure-generator

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  markdown-link-check.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
configs/: example_female_adult.json
src/figure_generator/: __init__.py  backends.py  blender_addon.py  cli.py  config.py  exporters.py  generator.py  presets.py
tests/: __init__.py  test_backends.py  test_blender_addon.py  test_cli.py  test_config.py  test_exporters.py  test_generator.py
