[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "figure-generator"
version = "1.0.0"
description = "Generate configurable 3D figure primitive meshes for digital sculpting"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Figure Generator Contributors"}
]
maintainers = [
    {name = "Figure Generator Contributors"}
]
keywords = [
    "3d",
    "mesh",
    "sculpting",
    "figure",
    "anatomy",
    "primitives",
    "nomad",
    "blender",
    "zbrush",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
trimesh = [
    "trimesh>=3.10.0",
]
open3d = [
    "open3d>=0.15.0",
]
stl = [
    "numpy-stl>=2.16.0",
]
all = [
    "trimesh>=3.10.0",
    "open3d>=0.15.0",
    "numpy-stl>=2.16.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
figure-generator = "figure_generator.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/figure-generator"
Documentation = "https://github.com/yourusername/figure-generator#readme"
Repository = "https://github.com/yourusername/figure-generator.git"
Issues = "https://github.com/yourusername/figure-generator/issues"
Changelog = "https://github.com/yourusername/figure-generator/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
figure_generator = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src", "tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/figure_generator"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
